# fly-autoplacer

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.fly  FUTURE.md  README.md  biome.json  config.yaml  docker-compose.yaml  entrypoint.fly.sh  fly.toml  local-dev.ts  main.py  pyproject.toml
automation/: auto_placer.py  logger.py
config/: config.yml
dashboard/: deno.json  server.ts  vite.config.ts
dashboard/app/: entry.client.tsx  root.tsx
data/: deployment_state.json  deployment_state_dry_run.json  traffic_history.json  traffic_history_dry_run.json
monitoring/: traffic_monitor.py
placer-dashboard/: Dockerfile  deno.json  fly.toml  server.ts
placer-dashboard/app/: entry.server.tsx  root.tsx
placer-dashboard/app/routes/: _index.tsx
placer-service/: Dockerfile  fly.toml  main.py  pyproject.toml
placer-service/automation/: auto_placer.py
placer-service/data/: deployment_state_dry_run.json  traffic_history_dry_run.json
placer-service/main/: Analysis-00.toc  EXE-00.toc  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-main.txt  xref-main.html
placer-service/metrics/: metrics_client.py
placer-service/prediction/: placement_predictor.py
placer-service/scripts/: remove_machine.sh
placer-service/tests/: simulate_traffic.py  test_history_manager.py  test_placement_predictor.py  test_state_manager.py
placer-service/utils/: metrics_fetcher.py  mock_traffic_generator.py  state_manager.py
prediction/: placement_predictor.py
scripts/: deploy_machine.sh
tests/: test_auto_placer.py  test_auto_scaler.py  test_cooldown.py  test_history_manager.py  test_predictor.py  test_state_manager.py
utils/: config_loader.py  fancy_logger.py  history_manager.py  metrics_fetcher.py  mock_traffic_generator.py  state_manager.py
