[tool.poetry]
name = "fly-placer"
version = "0.1.0"
description = "An auto-placer for Fly.io deployments based on real-time traffic patterns."
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "fly_placer", from = "." }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.27.1"
python-dotenv = "^0.20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
flake8 = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"